Implementação do modal em diversas páginas, correção de erros e bugs.

--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,6 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="movies.html">Movies</a>
-                <a class="dropdown-item" href="series.html">Series</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="news.html">What's next?</a>
               </div>
@@ -46,10 +45,13 @@
 
           </ul>
  
-          <form class="form-inline my-2 my-lg-0 mr-3">
-            <input class="form-control mr-sm-2 mb-1" type="search" placeholder="Your favorite movie" aria-label="Search" id="movie-search">
-            <button class="btn btn-outline-dark mb-1 mr-2 search-btn" type="button" id="button-search" data-toggle="modal" data-target="#searchMovies">Search</button>
-                  <div class="dropdown">
+          <form class="form-inline my-2 my-lg-0 ">
+            <form>
+              <input class="form-control mb-1" type="search" placeholder="Your favorite movie" aria-label="Search" id="movie-search">
+              <button class="btn btn-outline-dark mb-1 mr-2 search-btn" type="button" id="button-search" data-toggle="modal" data-target="#searchMovies">Search</button>
+            </form>
+
+              <div class="dropdown">
                     <button class="btn btn-dark sign-btn mb-1 mr-2 dropdown-toggle signIn-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <img src="srcs/assets/user.png" width="25" height="25">
                     </button>
