--- a/Crew.html
+++ b/Crew.html
@@ -34,7 +34,6 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="movies.html">Movies</a>
-              <a class="dropdown-item" href="series.html">Series</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="news.html">What's next?</a>
             </div>
@@ -149,7 +148,7 @@
           <div class="card m-4 crewCard">
             <div class="card-body">
               <img class="crewPic" src="srcs/assets/jansen.jpg">
-              <h5 class="card-title">Jansen</h5>
+              <h5 class="card-title">Jansen Bruno</h5>
               <h6 class="card-title">CIO</h6>
               <h6 class="card-subtitle mb-2 text-muted">Chief Information Officer</h6>
               <p class="card-text"><a class="contact" href="mailto:Jansen@resiliaflix.com">Contact</a></p>
@@ -162,7 +161,7 @@
           <div class="card m-4 crewCard">
             <div class="card-body">
               <img class="crewPic" src="srcs/assets/jarom.jpg">
-              <h5 class="card-title">Jarom</h5>
+              <h5 class="card-title">Jarom Aidukaitis</h5>
               <h6 class="card-title">CTO</h6>
               <h6 class="card-subtitle mb-2 text-muted">Chief Technical Officer</h6>
               <p class="card-text"><a class="contact" href="mailto:jarom@resiliaflix.com">Contact</a></p>
@@ -175,7 +174,7 @@
           <div class="card m-4 crewCard">
             <div class="card-body">
               <img class="crewPic" src="srcs/assets/joaquim.jpg">
-              <h5 class="card-title">Joaquim</h5>
+              <h5 class="card-title">Joaquim Castro</h5>
               <h6 class="card-title">CEO</h6>
               <h6 class="card-subtitle mb-2 text-muted">Chief Executive Officer</h6>
               <p class="card-text "><a class="contact" href="mailto:joaquim@resiliaflix.com">Contact</a></p>
@@ -189,7 +188,7 @@
           <div class="card m-4 crewCard">
             <div class="card-body">
               <img class="crewPic" src="srcs/assets/paula.jpg">
-              <h5 class="card-title">Paula</h5>
+              <h5 class="card-title">Paula Gomes</h5>
               <h6 class="card-title">CRM</h6>
               <h6 class="card-subtitle mb-2 text-muted">Customer Relationship Management</h6>
               <p class="card-text"><a class="contact" href="mailto:Paula@resiliaflix.com">Contact</a></p>
@@ -203,7 +202,7 @@
           <div class="card m-4 crewCard">
             <div class="card-body">
               <img class="crewPic" src="srcs/assets/tati.jpg">
-              <h5 class="card-title">Tati</h5>
+              <h5 class="card-title">Tati Machado</h5>
               <h6 class="card-title">CDO</h6>
               <h6 class="card-subtitle mb-2 text-muted">Chief Design Officer </h6>
               <p class="card-text"><a class="contact" href="mailto:tati@resiliaflix.com">Contact</a></p>
