conflito resolvido, se deus quiser

--- a/index.htm
+++ b/index.htm
@@ -21,10 +21,11 @@
           loading="lazy">
         Resíliaflix
       </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -37,7 +38,6 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="movies.html">Movies</a>
-              <a class="dropdown-item" href="series.html">Series</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="news.html">What's next?</a>
             </div>
@@ -47,8 +47,8 @@
             <a class="nav-link" href="Crew.html">Crew</a>
           </li>
 
-          </ul>
-        
+        </ul>
+
         <section class="form-inline my-2 my-lg-0 mr-3">
           <form id="form-search">
             <input class="form-control mr-sm-2 mb-1" type="search" placeholder="Your favorite movie" aria-label="Search"
@@ -75,11 +75,12 @@
                 <div class="form-group">
                   <label for="userPassword">Password</label>
                   <input type="password" class="form-control" id="userPassword">
-                  <small id="emailHelp" class="form-text text-muted mb-3"> <a class="passwordReset" href="passwordReset.html"> Forgot your password? </a></small>
+                  <small id="emailHelp" class="form-text text-muted mb-3"> <a class="passwordReset"
+                      href="passwordReset.html"> Forgot your password? </a></small>
                   <div class="form-group form-check m-1">
                     <input type="checkbox" class="form-check-input" id="rememberMe">
                     <label class="form-check-label" for="rememberMe">Remember me</label>
-                  </div>  
+                  </div>
                 </div>
                 <a href="#" role="button" class="btn btn-primary enter-btn">Enter</a></button>
               </form>
