--- a/newUser.html
+++ b/newUser.html
@@ -140,9 +140,8 @@
                             <div class="col-md-6 mb-3">
                                 <label for="validationDefault01">RG</label>
 
-                                <input type="text" class="form-control" id="identification" placeholder="Only numbers"
-                                    <input type="text" class="form-control" id="validationDefault01"
-                                    placeholder="Only numbers" required>
+                                <input type="text" class="form-control" id="identification" placeholder="Only numbers">
+                                <small id="messagerg"> </small>
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label for="validationDefault02">E-mail</label>
@@ -150,6 +149,7 @@
                                 <input type="text" class="form-control" id="email" placeholder="Your email" <input
                                     type="text" class="form-control" id="validationDefault02" placeholder="Your email"
                                     required>
+                                <small id="messagemail"> </small>
                             </div>
                         </div>
 
@@ -160,6 +160,8 @@
                                 <input type="password" class="form-control" id="password" placeholder="Password" <input
                                     type="text" class="form-control" id="validationDefault01" placeholder="Password"
                                     required>
+
+                                <small id="messagepassword"> </small>
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label for="validationDefault02">Confirm your password</label>
@@ -167,6 +169,7 @@
                                 <input type="password" class="form-control" id="validatepassword" placeholder="Password"
                                     <input type="text" class="form-control" id="validationDefault02"
                                     placeholder="Password" required>
+                                <small id="messagepasswordcheck"> </small>
                             </div>
                         </div>
 
@@ -175,6 +178,7 @@
                                 <label for="validationDefault02">Zip Code</label>
 
                                 <input type="text" class="form-control mb-2" placeholder="00000-000" id="zipcode">
+                                <small id="zipcodecheck"> </small>
                             </div>
                             <div class="col-md-6 mb-3">
                                 <button class="btn send-btn" type="button" id="submitadress">Search Zipcode</button>
@@ -188,8 +192,7 @@
                         </div>
                         <div class="form-group">
                             <label for="inputAddress2">Address 2</label>
-                            <input type="text" class="form-control" id="complement" <input type="text"
-                                class="form-control" id="inputAddress" placeholder="1234 Main St">
+                            <input type="text" class="form-control" id="complement" placeholder="1234 Main St">
                         </div>
 
                         <div class="form-row">
@@ -244,7 +247,7 @@
 </footer>
 
 
-<script src="srcs/javascript/newUser-validatePassword.js"></script>
+<script src="srcs/javascript/newUser-validation.js"></script>
 <script src="srcs/javascript/newUser-main.js"></script>
 <script src="srcs/javascript/models/ModelCep.js"></script>
 <script src="srcs/javascript/controllers/ControllerCep.js"></script>
@@ -254,12 +257,12 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-</script>
+    </script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-</script>
+    </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-</script>
+    </script>
 
 </html>
