--- a/index.htm
+++ b/index.htm
@@ -21,6 +21,7 @@
           loading="lazy">
         Resíliaflix
       </a>
+
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -38,6 +39,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="movies.html">Movies</a>
+              <a class="dropdown-item" href="series.html">Series</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="news.html">What's next?</a>
             </div>
@@ -72,17 +74,6 @@
                 Not a member yet?
                 <a href="newUser.html" role="button" class="btn btn-primary signUp-btn">Sign up now</a></button>
 
-                <div class="form-group">
-                  <label for="userPassword">Password</label>
-                  <input type="password" class="form-control" id="userPassword">
-                  <small id="emailHelp" class="form-text text-muted mb-3"> <a class="passwordReset"
-                      href="passwordReset.html"> Forgot your password? </a></small>
-                  <div class="form-group form-check m-1">
-                    <input type="checkbox" class="form-check-input" id="rememberMe">
-                    <label class="form-check-label" for="rememberMe">Remember me</label>
-                  </div>
-                </div>
-                <a href="#" role="button" class="btn btn-primary enter-btn">Enter</a></button>
               </form>
             </div>
           </div>
