Correção de erros e bugs após reset

--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@
 
     <main>     
       <!-- ERROR MSG-->
-      <div class=" d-flex justify-content-center align-items-center flex-column">
+      <div class=" d-flex justify-content-center align-items-center flex-column errorMsg">
         <div class="memberContact  p-5 d-flex flex-column align-items-center">
           <h3>Ops! We couldn't find what you're looking for.</h3>
           <br>
