--- a/Crew.html
+++ b/Crew.html
@@ -25,7 +25,7 @@
     
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item ">
             <a class="nav-link" href="index.htm">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
@@ -39,7 +39,7 @@
             </div>
           </li>
 
-          <li class="nav-item">
+          <li class="nav-item active">
               <a class="nav-link" href="Crew.html">Crew</a>
           </li>
 
@@ -97,7 +97,7 @@
                   <label class="form-check-label" for="rememberMe">Remember me</label>
                 </div>  
               </div>
-              
+              <button type="button" class="btn enter-btn" id="button-login" data-toggle="modal" data-target="#logIn">Enter</button>
             </form>
             <div class="modal-footer d-flex justify-content-center">
               <p>Problems in login?</p>
