--- a/index.htm
+++ b/index.htm
@@ -71,20 +71,8 @@
                 <div class="dropdown-divider"></div>
                 Not a member yet?
                 <a href="newUser.html" role="button" class="btn btn-primary signUp-btn">Sign up now</a></button>
-
-                <div class="form-group">
-                  <label for="userPassword">Password</label>
-                  <input type="password" class="form-control" id="userPassword">
-                  <small id="emailHelp" class="form-text text-muted mb-3"> <a class="passwordReset"
-                      href="passwordReset.html"> Forgot your password? </a></small>
-                  <div class="form-group form-check m-1">
-                    <input type="checkbox" class="form-check-input" id="rememberMe">
-                    <label class="form-check-label" for="rememberMe">Remember me</label>
-                  </div>
-                </div>
-                <a href="#" role="button" class="btn btn-primary enter-btn">Enter</a></button>
-              </form>
-            </div>
+              </form>    
+            </div>  
           </div>
         </section>
       </div>
@@ -119,6 +107,7 @@
                   <label class="form-check-label" for="rememberMe">Remember me</label>
                 </div>
               </div>
+              <button type="button" class="btn enter-btn" id="button-login" data-target="#logIn">Enter</button>
             </form>
             <div class="modal-footer d-flex justify-content-center">
               <p>Problems in login?</p>
