--- a/Login.html
+++ b/Login.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="srcs/assets/logo2.PNG">
     <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="srcs/css/LoginStyle.css">
+    <link rel="stylesheet" href="srcs/css/loginStyle.css">
     <title>Login - ResíliaFlix</title>
 </head>
 
