Atualização script password

--- a/passwordReset.html
+++ b/passwordReset.html
@@ -142,21 +142,30 @@
         </div>
     </div>
 
-      <!-- MEMBER PASSWORD RESET-->
+      <!--DIV QUE TRATA ALERT GREEN\RED -->
+      <div class="contactArea d-flex justify-content-center">
+        <span id="spanAlert"></span>
+      </div>
+      <!--FIM-->
+  
+   <!-- MEMBER PASSWORD RESET-->
       <div class="contactArea d-flex justify-content-center">
         <div class="memberContact m-5 p-5">
           <h3>Can't sign in? Let's reset your password.</h3>
-          <form>
+          <form class="needs-validation" novalidate>
             <div class="form-group">
               <label for="emailContact">Email address</label>
-              <input type="email" class="form-control" id="emailContact" placeholder="Your email here">
+              <input type="email" class="form-control" id="emailCheck" placeholder="Your email here">
             </div>
+  <!--ChecheckBox -->
+              <span id="emailAlert"></span>
             <div class="form-group form-check">
-              <input type="checkbox" class="form-check-input" id="agreeCheck">
+              <input type="checkbox"  class="form-check-input" id="agreeCheck" value="1" onclick="Checa(this)"/>
               <label class="form-check-label" for="agreeCheck">I agree to reset my password</label>
             </div>
-            <button type="submit" class="btn send-btn lets-btn">Send</button>
-
+  <!--FIM-->
+            <button type="submit" id="sendBtn" class="btn send-btn">Send</button>
+  
             
           </form>
         </div>
@@ -201,7 +210,7 @@
     <br><br>
     <p>Resília LTDA &#169</p>
 </footer>
-
+<script src="srcs/javascript/passwordReset.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
