--- a/movieSearch.html
+++ b/movieSearch.html
@@ -213,6 +213,7 @@
 
 <script src="srcs/javascript/movieSearch.js"></script>
 
+<script src="srcs/javascript/loginNavbar.js"></script>
 <script src="srcs/javascript/controllers/SearchController.js"></script>
 <script src="srcs/javascript/models/SearchModel.js"></script>
 <script src="srcs/javascript/views/SearchView.js"></script>
