--- a/passwordReset.html
+++ b/passwordReset.html
@@ -52,7 +52,10 @@
 </header>
 
   <main>     
-    
+      <div class="contactArea d-flex justify-content-center">
+        <span id="spanAlert"></span>
+      </div>
+
       <!-- MEMBER PASSWORD RESET-->
       <div class="contactArea d-flex justify-content-center">
         <div class="memberContact m-5 p-5">
