--- a/index.htm
+++ b/index.htm
@@ -111,7 +111,7 @@
             </form>
             <div class="modal-footer d-flex justify-content-center">
               <p>Problems in login?</p>
-              <a href="#" role="button" type="submit" class="btn btn-primary lets-btn">Help me</a></button>
+              <a href="passwordReset.html" role="button" type="submit" class="btn btn-primary lets-btn">Help me</a></button>
             </div>
           </div>
         </div>
@@ -259,7 +259,7 @@
         <input type="text" class="form-control" placeholder="E-mail" aria-label="Recipient's username"
           aria-describedby="button-addon2">
         <div class="input-group-append">
-          <button class="btn btn-outline lets-btn" type="submit" id="button-addon2">Let's go!</button>
+          <a class="btn btn-outline lets-btn" href="newUser.html" type="submit" id="button-addon2">Let's go!</a>
         </div>
       </div>
     </div>
