--- a/loggedIndex.htm
+++ b/loggedIndex.htm
@@ -120,6 +120,7 @@
       <div class="d-flex justify-content-center flex-column p-3 m-5 userArea">
           <spam class="d-flex align-items-center flex-column">
           <h3 class="pt-5 borderDot"><b>@User</b>, did you already get your popcorn?</h3>
+          Go get it, our movies are waiting for you. :)
           </spam>
         </div>
 
@@ -177,9 +178,10 @@
             </div>
           </div>
         </div>  
-
       </div>
 
+
+      
 
         <br><br>
 
