--- a/movieSearch.html
+++ b/movieSearch.html
@@ -28,7 +28,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item ">
+        <li class="nav-item">
           <a class="nav-link" href="index.htm">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
@@ -65,7 +65,7 @@
               <div class="dropdown-divider"></div>
               Not a member yet?
               <a href="newUser.html" role="button" class="btn btn-primary signUp-btn">Sign up now</a></button>
-
+                
             </form>
           </div>
         </div>
@@ -102,10 +102,12 @@
                   <label class="form-check-label" for="rememberMe">Remember me</label>
                 </div>
               </div>
+              <button type="button" class="btn enter-btn" id="button-login" data-toggle="modal"
+                data-target="#logIn">Enter</button>
             </form>
             <div class="modal-footer d-flex justify-content-center">
               <p>Problems in login?</p>
-              <a href="#" role="button" class="btn btn-primary lets-btn">Help me</a></button>
+              <a href="passwordReset.html" role="button" class="btn btn-primary lets-btn">Help me</a></button>
             </div>
           </div>
         </div>
@@ -132,7 +134,7 @@
     <br><br>
 
     <!--RESULT AREA-->
-
+    
     <div class="row row-cols-1 row-cols-md-4 resultArea p-5 ml-5 mr-5" id="search-results-container">
 
     </div>
