--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@
           </li>
 
         </ul>
-
+        <!--NAVBAR SEARCH-->
         <section class="form-inline my-2 my-lg-0 mr-3">
           <form id="form-search">
             <input class="form-control mr-sm-2 mb-1" type="search" placeholder="Your favorite movie" aria-label="Search"
