--- a/movies.html
+++ b/movies.html
@@ -50,14 +50,14 @@
 
         </ul>
 
-        <form class="form-inline my-2 my-lg-0 ">
-          <form>
-            <input class="form-control mb-1" type="search" placeholder="Your favorite movie" aria-label="Search"
+        <!--NAVBAR SEARCH-->
+        <section class="form-inline my-2 my-lg-0 mr-3">
+          <form id="form-search">
+            <input class="form-control mr-sm-2 mb-1" type="search" placeholder="Your favorite movie" aria-label="Search"
               id="movie-search">
-            <button class="btn btn-outline-dark mb-1 mr-2 search-btn" type="button" id="button-search"
+            <button class="btn btn-outline-dark mb-1 mr-2 search-btn" type="submit" id="button-search"
               data-toggle="modal" data-target="#searchMovies">Search</button>
           </form>
-
           <div class="dropdown">
             <button class="btn btn-dark sign-btn mb-1 mr-2 dropdown-toggle signIn-btn" type="button"
               id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -68,16 +68,15 @@
             <div class="dropdown-menu dropdown-menu-right p-3" aria-labelledby="dropdownMenuButton">
               <h3>Hello! :) </h3>
               <form>
-                <button type="button" class="btn enter-btn" id="button-login" data-toggle="modal"
+                <button type="button" class="btn enter-btn" data-toggle="modal"
                   data-target="#logIn">Enter</button>
                 <div class="dropdown-divider"></div>
                 Not a member yet?
                 <a href="newUser.html" role="button" class="btn btn-primary signUp-btn">Sign up now</a></button>
-
-              </form>
-            </div>
+              </form>    
+            </div>  
           </div>
-        </form>
+        </section>
       </div>
     </nav>
   </header>
@@ -96,13 +95,13 @@
           <div class="modal-body p-0">
             <form class="p-3">
               <div class="form-group">
-                <label for="userEmail">Email address</label>
-                <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp">
+                <label for="user-email">Email address</label>
+                <input type="email" class="form-control" id="user-email" aria-describedby="emailHelp">
               </div>
 
               <div class="form-group">
-                <label for="userPassword">Password</label>
-                <input type="password" class="form-control" id="userPassword">
+                <label for="user-password">Password</label>
+                <input type="password" class="form-control" id="user-password">
                 <small id="emailHelp" class="form-text text-muted mb-3"> <a class="passwordReset"
                     href="passwordReset.html"> Forgot your password? </a></small>
                 <div class="form-group form-check m-1">
@@ -110,12 +109,11 @@
                   <label class="form-check-label" for="rememberMe">Remember me</label>
                 </div>
               </div>
-              <button type="button" class="btn enter-btn drop-btn" id="button-login" data-toggle="modal"
-                data-target="#logIn">Enter</button>
+              <button type="submit" class="btn enter-btn" id="button-login" data-target="#logIn">Enter</button>
             </form>
             <div class="modal-footer d-flex justify-content-center">
               <p>Problems in login?</p>
-              <a href="#" role="button" class="btn btn-primary signUp-btn">Help me</a></button>
+              <a href="passwordReset.html" role="button" type="submit" class="btn btn-primary lets-btn">Help me</a></button>
             </div>
           </div>
         </div>
@@ -125,38 +123,25 @@
 
     <!--SEARCHMOVIES MODAL-->
     <div class="modal fade" id="searchMovies" tabindex="-1" role="dialog" aria-labelledby="infoMoviesLabel"
-      aria-hidden="true">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="infoMoviesLabel">Search result</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body p-0">
-            <div class="resultArea d-flex justify-content-center p-md-1 m-md-1">
-              <img class="poster p-3" id="poster" src="srcs/assets/ResiliaPoster.jpg">
-              <div class="memberSearch m-md-3 p-md-3">
-                <h3 class="mb-5" id="title"><b>TITLE</b></h3>
-                <p id="year">YEAR: </p>
-                <p id="director">DIRECTOR: </p>
-                <p id="runtime">RUNTIME: </p>
-                <p id="actors">STARS:</p>
-                <p id="release">RELEASE DATE: </p>
-                <p id="synopsis">SYNOPSIS: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse quis
-                  odio non nibh cursus pulvinar. Nulla sagittis, tellus nec mattis finibus, metus nisi facilisis nisi,
-                  in eleifend orci metus sit amet erat. Morbi vel metus vitae lorem dapibus feugiat. </p>
-              </div>
-            </div>
-            <div class="modal-footer d-flex justify-content-center">
-              <p>Not what you're looking for? Try our</p>
-              <button type="button" class="btn lets-btn" data-dismiss="modal">Advanced search</button>
-            </div>
-          </div>
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="infoMoviesLabel">Search result</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body p-0" id="modal-body"></div>
+
+        <div class="modal-footer d-flex justify-content-center">
+          <p>Not what you're looking for? Try our</p>
+          <button type="button" class="btn lets-btn" data-dismiss="modal"
+            onclick="window.location.href='movieSearch.html'">Advanced search</button>
         </div>
       </div>
     </div>
+  </div>
 
     <div id="desktopView">
       <!--MOST WATCHED MOVIES CAROUSEL-->
@@ -772,14 +757,15 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
   integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   
-<script src="srcs/javascript/loginNavbar.js"></script>
-
-<script src="srcs/javascript/carouselMovies.js"></script>
-
-<script src="srcs/javascript/controllers/ModalSearchController.js"></script>
-<script src="srcs/javascript/controllers/CarouselModalController.js"></script>
-<script src="srcs/javascript/models/ModalSearchModel.js"></script>
-<script src="srcs/javascript/views/ModalSearchView.js"></script>
-<script src="srcs/javascript/views/ModalSearchError.js"></script>
+  <script src="srcs/javascript/loginNavbar.js"></script>
+  <script src="srcs/javascript/modalSearch.js"></script>
+  <script src="srcs/javascript/carouselMovie.js"></script>
+  
+  <script src="srcs/javascript/controllers/ModalSearchController.js"></script>
+  <script src="srcs/javascript/controllers/CarouselModalController.js"></script>
+  <script src="srcs/javascript/models/ModalSearchModel.js"></script>
+  <script src="srcs/javascript/views/ModalSearchView.js"></script>
+  <script src="srcs/javascript/views/ModalSearchError.js"></script>
+  
 
 </html>
