Finalização das páginas e funcionalidades responsivas

--- a/movieSearch.html
+++ b/movieSearch.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="srcs/css/mSearchStyle.css">
-  <title>Movie Results - ResíliaFlix</title>
+  <title>Movie Search - ResíliaFlix</title>
 </head>
 
 <body>
@@ -134,7 +134,7 @@
 
     <!--RESULT AREA-->
     
-    <div class="row row-cols-1 row-cols-md-4 resultArea p-5 ml-5 mr-5" id="search-results-container">
+    <div class="row row-cols-1 row-cols-md-4 resultArea p-5 ml-2 mr-2" id="search-results-container">
 
     </div>
 
