Finalização das páginas e funcionalidades responsivas

--- a/movies.html
+++ b/movies.html
@@ -726,7 +726,7 @@
           <input type="text" class="form-control" placeholder="E-mail" aria-label="Recipient's username"
             aria-describedby="button-addon2">
           <div class="input-group-append">
-            <button class="btn btn-outline lets-btn" type="submit" id="button-addon2">Let's go!</button>
+            <a href="newUser.html" class="btn btn-outline lets-btn" type="submit" id="button-addon2">Let's go!</a>
           </div>
         </div>
       </div>
