Conserto de bugs menores

--- a/index.htm
+++ b/index.htm
@@ -50,7 +50,7 @@
         </ul>
         <!--NAVBAR SEARCH-->
         <section class="form-inline my-2 my-lg-0 mr-3">
-          <form id="form-search">
+          <form class="navSearch" id="form-search">
             <input class="form-control mr-sm-2 mb-1" type="search" placeholder="Your favorite movie" aria-label="Search"
               id="movie-search">
             <button class="btn btn-outline-dark mb-1 mr-2 search-btn" type="submit" id="button-search"
