--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="srcs/css/indexStyle.css">
-  <title>Resíliaflix</title>
+  <title>Resiliaflix</title>
 </head>
 
 <body>
