--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
       <a class="navbar-brand nav-text" href="index.htm">
         <img src="srcs/assets/logo2.PNG" width="35" height="35" class="d-inline-block align-center" alt="ResiliaFlix"
           loading="lazy">
-        Resíliaflix
+        Resiliaflix
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
