--- a/Login.html
+++ b/Login.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="srcs/css/loginStyle.css">
-    <title>Login - ResíliaFlix</title>
+    <title>Login - ResiliaFlix</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
       <nav class="navbar navbar-expand-lg fixed-top navbar-light">
         <a class="navbar-brand nav-text" href="index.htm">
           <img src="srcs/assets/logo2.PNG" width="35" height="35" class="d-inline-block align-center" alt="ResiliaFlix" loading="lazy">
-          Resíliaflix
+          Resiliaflix
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -101,7 +101,7 @@
       <a href="https://instagram.com/resiliaflix" target="blank"><img src="srcs/assets/instagram.png" width="30" height="30"></a>         
     </div>  
     <br><br>
-    <p>Resília LTDA &#169</p>
+    <p>Resilia LTDA &#169</p>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
