--- a/404.html
+++ b/404.html
@@ -76,7 +76,7 @@
       <a href="https://instagram.com/resiliaflix" target="blank"><img src="srcs/assets/instagram.png" width="30" height="30"></a>         
     </div>  
     <br><br>
-    <p>Resília LTDA &#169</p>
+    <p>Resilia LTDA &#169</p>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
