--- a/index.htm
+++ b/index.htm
@@ -403,7 +403,7 @@
 
   </div>
   <br><br>
-  <p>Resília LTDA &#169</p>
+  <p>Resilia LTDA &#169</p>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
